--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,6 +34,9 @@ body {
 @media only screen and (min-width: 950px) {
     body {
         background: url('/images/bg-header-desktop.png');
+        background-position: top;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 }
 
@@ -58,6 +61,7 @@ h1, h2, h3 {
 
 .text {
     color: var(--grayish-blue);
+    line-height: 1.5;
 }
 
 .btn {
@@ -88,8 +92,31 @@ h1, h2, h3 {
     text-align: center;
 }
 
+@media only screen and (min-width: 1440px) {
+    .intro-section {
+        width: 50%;
+        margin: auto;
+    }
+
+    .btn {
+        padding: 1rem 2rem;
+    }
+
+    .box-btn {
+        margin: 0;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
+
+    .intro-section .btn + .btn {
+    margin-top: 0;
+}
+}
+
+
 .intro-logo {
-    width: 30%;
+    max-width: 15%;
 }
 
 
@@ -137,6 +164,35 @@ h1, h2, h3 {
 }
 
 
+@media only screen and (min-width: 1440px) {
+    .section-features .intro-box {
+        width: 55%;
+        margin: auto;
+    }
+
+    .feature-box {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        width: 90%;
+        text-align: justify;
+    }
+
+    .feature > .box .text {
+        width: 70%;
+        font-size: 16px;
+    }
+
+    .feature-box img {
+        transform: translate(-20%);
+        width: 100%;
+        margin-bottom: 0;
+    }
+
+    .feature-box div:not(:last-child) {
+    margin-bottom: 0;
+}
+}
+
 .section-access {
     margin: 5rem 0 ;
 }
@@ -145,11 +201,11 @@ h1, h2, h3 {
     margin: 4rem 0;
 }
 
-.box-2 {
+/* .box-2 {
     margin: 2rem 0 3rem 0;
-}
+} */
 
-.section-access .box:not(:last-child) {
+.section-access .box {
     margin-bottom: 2rem;
 }
 
@@ -157,8 +213,33 @@ h1, h2, h3 {
     margin: 3rem 0;
 }
 
+.access--one img {
+    height: 32px;
+
+}
+
 .box .box__heading {
     margin-bottom: 1rem;
+}
+
+@media only screen and (min-width: 1440px) {
+    .section-access {
+        margin: 2rem auto;
+    }
+
+    .section-access .intro-box {
+        width: 55%;
+        margin: auto;
+    }
+
+    .access {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        text-align: center;
+    } 
+
+
 }
 
 .section-companies {
@@ -167,19 +248,32 @@ h1, h2, h3 {
 }
 
 .company-logos {
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+}
+
+@media only screen and (min-width: 1440px) {
+    .company-logos {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .company-logos img {
+    margin-top: 3.5rem;
+}
 }
 
 .company-logos img:not(:first-child) {
     margin-top: 3.5rem;
 }
 
-.outro-section .text {
+.outro-text {
     margin-bottom: 2rem;
 }
+
+
 
 footer {
     padding: 3rem;
@@ -211,6 +305,37 @@ footer {
     display: flex;
     justify-content: space-between;
     align-content: center;
+}
+
+@media only screen and (min-width:1440px) {
+    .footer-logo {
+        width: 15%;
+    }
+    .footer-wrapper {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .footer-links {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        text-align: justify;
+        gap: 20px;
+    }
+
+    .footer-links .link__items:not(:last-child){
+        margin-bottom: 0rem;
+    }
+
+    .social-media {
+        justify-content: flex-end;
+        height: 40%;
+        margin: auto 0;
+        
+    }
+
+    .social-media a:not(:last-child) {
+        margin-right: 20px;
+    }
 }
 
 
